--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <app-root></app-root>
-    <script src="https://meet.jit.si/external_api.js"></script>
+    <script src="https://meet.spirinova.dev/external_api.js"></script>
 </body>
 
 </html>
