--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
 <body>
     <app-root></app-root>
     <script src="https://meet.spirinova.dev/external_api.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 
 </html>
